[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/BoxesDream.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Dialog/DialogUI.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/chars/CloseUp/Player/player_normal.tres" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 96
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 96
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 96
font_data = ExtResource( 1 )

[node name="Dialog" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="DialogContainer" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -1170.0
margin_top = -430.0
margin_right = 1170.0
margin_bottom = -70.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="DialogContainer"]
margin_top = -300.0
margin_right = 537.0
margin_bottom = 22.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character" type="TextureRect" parent="DialogContainer/HBoxContainer"]
margin_right = 256.0
margin_bottom = 322.0
rect_min_size = Vector2( 256, 256 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterName" type="Label" parent="DialogContainer/HBoxContainer"]
margin_left = 260.0
margin_top = 117.0
margin_right = 537.0
margin_bottom = 205.0
custom_fonts/font = SubResource( 1 )
text = "Character Name"

[node name="ColorRect" type="ColorRect" parent="DialogContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.196078, 0.164706, 0.164706, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Statement" type="RichTextLabel" parent="DialogContainer"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 50.0
margin_top = -144.0
margin_right = 2050.0
margin_bottom = 144.0
custom_fonts/normal_font = SubResource( 2 )
visible_characters = 0
percent_visible = 0.0
text = "sajdadjaddddddddddddddddddddddddddddddddddddddddddddddddddddd"
scroll_active = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Next" type="Button" parent="DialogContainer"]
visible = false
margin_left = 2200.0
margin_top = 230.0
margin_right = 2298.0
margin_bottom = 324.0
custom_fonts/font = SubResource( 3 )
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="DialogContainer"]
[connection signal="pressed" from="DialogContainer/Next" to="." method="_on_Next_pressed"]
